[5.x] Fix dark mode license banner (#10147)

--- a/resources/css/components/nav-main.css
+++ b/resources/css/components/nav-main.css
@@ -72,7 +72,7 @@
         @apply fixed flex bg-transparent shadow-none overflow-auto rtl:border-l ltr:border-r dark:border-dark-900;
         height: calc(100% - 52px);
         .showing-license-banner & {
-            height: calc(100% - 120px);
+            height: calc(100% - 105px);
         }
     }
 }
